First iteration of home page completed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Arimo:wght@600&family=Dancing+Script:wght@600;700&family=Karla:wght@500&family=Lexend&family=Lexend+Deca&family=Lora:wght@500&family=Open+Sans:wght@700&family=Raleway:wght@500&family=Roboto:wght@500&display=swap&family=Ubuntu&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Data Warehouse</title>
 </head>
 
 <body>
