--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Arimo:wght@600&family=Dancing+Script:wght@600;700&family=Karla:wght@500&family=Lexend&family=Lexend+Deca&family=Lora:wght@500&family=Open+Sans:wght@700&family=Raleway:wght@500&family=Roboto:wght@500&display=swap&family=Ubuntu&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Data Warehouse</title>
 </head>
