--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 
 <body>
   <div id="root"></div>
+  <!-- Let Vite inject the correct JS in production -->
+  
   <script type="module" src="/src/main.jsx"></script>
+
+
 </body>
 
 </html>
